--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -52,38 +52,39 @@
          </p>
         
         </div>
-        <table>
-
+<table>
   <thead>
-  <th><strong>Shape</strong></th>
-  <th><strong>Sides</strong></th>
-  <th><strong>Angles</strong></th>
+    <tr>
+      <th><strong>Shape</strong></th>
+      <th><strong>Sides</strong></th>
+      <th><strong>Angles</strong></th>
+    </tr>
   </thead>
-<tbody>
-<tr> 
-<td>Triangle<br><img src="triangle.png"  alt="triangle"  style="width:200px; height:auto;"></td>
-<td>3</td>
-<td>3</td>
-</tr>
-<tr> 
-<td>Quadrilateral<br>
-  <img src="rectangle.png" alt="rectangle"  style="width:180px; height:auto;"><br>
-  <img src="square.png" alt="square"  style="width:100px; height:auto;">
-</td>
-<td>4</td>
-<td>4</td>
-</tr>
-<tr> 
-<td>Pentagon<br><img src="pentagon.png" alt="pentagon"  style="width:100px; height:auto;"></td>
-<td>5</td>
-<td>5</td>
-</tr>
-<tr> 
-<td>Hexagon<br><img src="hexagon.png" alt="hexagon"  style="width:100px; height:auto;"></td>
-<td>6</td>
-<td>6</td>
-</tr>
-</tbody>
+  <tbody>
+    <tr> 
+      <td>Triangle<br><img src="triangle.png"  alt="triangle"  style="width:200px; height:auto;"></td>
+      <td>3</td>
+      <td>3</td>
+    </tr>
+    <tr> 
+      <td>Quadrilateral<br>
+        <img src="rectangle.png" alt="rectangle"  style="width:180px; height:auto;"><br>
+        <img src="square.png" alt="square"  style="width:100px; height:auto;">
+      </td>
+      <td>4</td>
+      <td>4</td>
+    </tr>
+    <tr> 
+      <td>Pentagon<br><img src="pentagon.png" alt="pentagon"  style="width:100px; height:auto;"></td>
+      <td>5</td>
+      <td>5</td>
+    </tr>
+    <tr> 
+      <td>Hexagon<br><img src="hexagon.png" alt="hexagon"  style="width:100px; height:auto;"></td>
+      <td>6</td>
+      <td>6</td>
+    </tr>
+  </tbody>
 </table>
          <div class="subsection">
   <h2 class="h2"> Non-Polygons</h2>
@@ -111,43 +112,47 @@
 </div>
 
 <table>
-<tbody>
+<table>
   <thead>
-  <th><strong>Shape</strong></th>
-  <th><strong>Sides</strong></th>
-  <th><strong>Angles</strong></th>
+    <tr>
+      <th><strong>Shape</strong></th>
+      <th><strong>Sides</strong></th>
+      <th><strong>Angles</strong></th>
+      <th><strong>Example</strong></th>
+    </tr>
   </thead>
-<tr> 
-<td>Cone<br><img src="cone.png" alt="cone"></td>
-<td>2, 1 curved and the other in the shape of a circle</td>
-<td>1</td>
-<td>Traffic Cone, Icecream Cone</td>
-</tr>
-<tr> 
-<td>Cylinders<br><img src="cylinder.png" alt="cylinder"></td>
-<td>2 in the shape of a circle and then 1 curved shape</td>
-<td>0</td>
-<td>Soup can</td>
-</tr>
-<tr> 
-<td>Sphere<br><img src="sphere.png" alt="sphere"></td>
-<td>0</td>
-<td>0</td>
-<td>ball</td>
-</tr>
-<tr> 
-<td>Pyramids<br><img src="pyramid.png" alt="pyramid"></td>
-<td>4 triangle, 1 square (as the base)</td>
-<td>5</td>
-<td>Pyramid</td>
-</tr>
-<tr> 
-<td>Rectangular Prism<br><img src="rectangularprism.png" alt="rectangularprism"></td>
-<td>6</td>
-<td>8</td>
-<td>Tissue Box</td>
-</tr>
-</tbody>
+  <tbody>
+    <tr> 
+      <td>Cone<br><img src="cone.png" alt="cone"></td>
+      <td>2, 1 curved and the other in the shape of a circle</td>
+      <td>1</td>
+      <td>Traffic Cone, Icecream Cone</td>
+    </tr>
+    <tr> 
+      <td>Cylinders<br><img src="cylinder.png" alt="cylinder"></td>
+      <td>2 in the shape of a circle and then 1 curved shape</td>
+      <td>0</td>
+      <td>Soup can</td>
+    </tr>
+    <tr> 
+      <td>Sphere<br><img src="sphere.png" alt="sphere"></td>
+      <td>0</td>
+      <td>0</td>
+      <td>ball</td>
+    </tr>
+    <tr> 
+      <td>Pyramids<br><img src="pyramid.png" alt="pyramid"></td>
+      <td>4 triangle, 1 square (as the base)</td>
+      <td>5</td>
+      <td>Pyramid</td>
+    </tr>
+    <tr> 
+      <td>Rectangular Prism<br><img src="rectangularprism.png" alt="rectangularprism"></td>
+      <td>6</td>
+      <td>8</td>
+      <td>Tissue Box</td>
+    </tr>
+  </tbody>
 </table>
 </section>
 <section id="comparison" class="section">
