--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -53,6 +53,7 @@
         
         </div>
 <table>
+  <caption>Polygons</caption>
   <thead>
     <tr>
       <th><strong>Shape</strong></th>
@@ -114,6 +115,7 @@
 
 
 <table>
+  <caption>3D Figures</caption>
   <thead>
     <tr>
       <th><strong>Shape</strong></th>
