--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -33,7 +33,7 @@
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
-    <li><a href="contact">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
   <!-- This is the main content of my site -->
@@ -41,29 +41,36 @@
   <header><h1 class="h1"><em>Alison McAleer</em></h1></header><h1 class="h1"> Educator Credentials</h1>
  
   <div class="flex-container"> 
-  <iframe class="iframe" width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen>
-   </iframe>
-<div class="quote-box">
+    <section id="credentials" class="section">
+      <h2 class="h2">About Me</h2>
+      <p>Welcome to my educator credentials page! Here you will find information about my education, certifications, and professional background.</p>
+  <div class="textbox2">
+      <iframe class="iframe" width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen>
+   </iframe></div>
+<div class="textbox2">
   <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p>
-
-</div></div>
- <br> <div class="flex-container">
+</section>
+</div>
+ <br>
+ <section id="education" class="section">
   <ol>
-     <div class="quote-box">   <h2>Education History</h2>
+     <div class="quote-box">  
+       <h2>Education History</h2>
     <li> Graduated Highshool in 2014 </li>
     <li> Graduated from Georgia College & State University in Milledgeville, GA with a Bachelor's Degree in Special Education (May, 2018)</li>
   <li>Master's Degree in Educational Leadership from Georgia College (August, 2020)</li>
   </ol>
- </div></div>
+ </div></section>
  <br>
 <br>
-<div class="flex-container">
-  <img src="alisonheadshot.jpg" class="img" alt="Alison McAleer Headshot">
-  <div class="quote-box"> <h2><strong>Trainings & Certifications</strong></h2><p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p></div></div>
+<section id="certifications" class="section">
+  <img src="alisonheadshot.jpg" class="imgalison" alt="Alison McAleer Headshot">
+  <div class="quote-box"> <h2><strong>Trainings & Certifications</strong></h2><p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p>
+  </section></div>
+    <br>
   <br>
   <br>
-  <br>
-  <div class="flex-container">
+
   <div class="quote-box">
     <blockquote class="quotes">
       "The roots of education are bitter, but the fruit is sweet." – Aristotle
@@ -72,8 +79,8 @@
 </div>
 
 </main>
-<footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">
-  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
+<footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">
+  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">  
 ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;">1+888-888-8888 </footer>
 
 </body>
