--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -33,7 +33,7 @@
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
-    <li><a href="contact">Contact</a></li>
+    <li><a href="contact.html">Contact</a></li>
   </ul>
 </nav>
  <!-- This is the main content of my site -->
