--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -43,14 +43,14 @@
     <div class="quote-box">
         <p>If you have any questions, comments, or feedback about the site, pleasemreach out to me using the contact information below. I would love to hear from you!</p>
 <h2 class="h2">Contact Information</h2>
-<p>
+
 <h3> Alison McAleer</h3>
-Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  ampdp@umsystem.edu </a></p>
+Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  ampdp@umsystem.edu </a>
 <form action="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject" method="POST" enctype="text/plain">
   <label for="name">First Name:<br>
-  <input type="text" id="name" name="name" placeholder="First Name" required></label><br><br>
+  <input type="text" id="First" name="First" placeholder="First Name" required></label><br><br>
 <label for="name">Last Name:<br>
-  <input type="text" id="name" name="name" placeholder="Last Name" required></label><br><br>
+  <input type="text" id="Last" name="Last" placeholder="Last Name" required></label><br><br>
 
   <label for="subject">Subject:<br>
   <input type="text" id="subject" name="subject" placeholder="subject" required></label><br><br>
@@ -58,7 +58,7 @@ Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  amp
   <label for="message">Message:<br>
   <textarea id="message" name="message" placeholder="Type Text Here" rows="10" required></textarea></label><br><br>
 <button type="reset">Reset</button>
-  <button type="submit" action="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject" method="POST" enctype="text/plain">Submit</button>
+  <button type="submit">Submit</button>
 </form>
 </div></div>
   </main>
