--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -47,9 +47,9 @@
 <h3> Alison McAleer</h3>
 Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  ampdp@umsystem.edu </a>
 <form action="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject" method="POST" enctype="text/plain">
-  <label for="name">First Name:<br>
+  <label for="First">First Name:<br>
   <input type="text" id="First" name="First" placeholder="First Name" required></label><br><br>
-<label for="name">Last Name:<br>
+<label for="Last">Last Name:<br>
   <input type="text" id="Last" name="Last" placeholder="Last Name" required></label><br><br>
 
   <label for="subject">Subject:<br>
