--- a/webdevelopment/index.html
+++ b/webdevelopment/index.html
@@ -3,8 +3,7 @@
 <head>
                <meta charset="utf-8">
                <title>Jumping into Geometry!</title>
-                 <link rel="icon" href="favicon.ico" type="image/x-icon">
-             <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
+                
                <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="navRESPONSIVETEST.css">
@@ -17,15 +16,15 @@
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="toggle">&#9776;</label>
   <ul class="menu">
-    <li class="logo"><a href="#">Jumping into Geometry!</a></li>
+    <li class="logo">Jumping into Geometry!</li>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
      <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
      <ul class="submenu">
-        <li class="subitem"><a href="learn.html/#2Dshapes">2D Shapes</a></li>
-        <li class="subitem"><a href="learn.html/#3Dshapes">3D Figures</a></li>
-        <li class="subitem"><a href="learn.html/#comparison">2D vs. 3D</a></li>
+        <li class="subitem"><a href="learn.html#2Dshapes">2D Shapes</a></li>
+        <li class="subitem"><a href="learn.html#3Dshapes">3D Figures</a></li>
+        <li class="subitem"><a href="learn.html#comparison">2D vs. 3D</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
@@ -33,21 +32,31 @@
   </ul>
 </nav>
 <!-- This is the main content of my site -->
-    <main><header><h1 class="h1">Jumping into Geometry! </h1><h2 class="h2"> This site is an introduction into 2D shapes and 3D figures.  </h2></header>
+    <main><header><h1 class="h1">Jumping into Geometry! </h1></header>
 <div class="flex-container">
-    <img src="frog.jpg" width="300" height="200" alt="Frog picture">
-    <div class="quote-box">
-        <p>The purpose of this website is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts but also provide resources for parents to help their child at home. I want a website that is colorful yet clean that is interactive. This will help it appeal to children and parents.</p>
-</div></div>
-        <br><div class="flex-container">
-<div class="quote-box"><h2>Goals of this site...</h2>
+  <section id="welcome" class="section">
+  
+    <div class="purpose-image-flex">
+     
+      <div class="purpose">
+         <h2 class="h2"> Welcome! <br> This site is an introduction into 2D shapes and 3D figures. </h2>
+        <p>The purpose is to introduce parents and students to the basics of geometry. This includes identifying (naming) 2D shapes and 3D figures, understanding the difference between 2D shapes and 3D figures, as well as naming attributes of both in order to identify them. This website will include not only information regarding the concepts, but also provide resources for parents to help their child at home. I want a website that is colorful, yet clean. This will help it appeal to children and parents.</p>
+       <img id="frogimage" src="frog.jpg" alt="Frog picture">
+      </div>
+  
+    </div>
+      </section> 
+
+<div class="goals2">
+  <h2>Goals of this site:</h2>
 <ol>
     <li> Students will be able to name 2D shapes. </li>
 <li>Students will be able to name 3D figures. </li>
 <li>Students will be able to tell the difference between 2D and 3D figures due to the differences in attributes.</li> 
-</ol></div>
+</ol>
 <br>
- <div class="quote-box">
+</div>
+<div class="goals2">
 <h2>Objective of this site:</h2>
 <ul>
     <li>Clean & visually appealing</li>
@@ -59,9 +68,13 @@
 </div>
 </div>
 </main>
-<footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">
-  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20pxx; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;">1+888-888-8888 </footer>
-
+<footer>Alison McAleer <br>
+  <img class="icon" src="icons8-email-24.png" alt="emailicon" style="width: 20px; height: 20px;"><img class="iconbig" src="icons8-email-24.png" alt="emailicon">
+ 
+  <a href="contact.html"> ampdp@umsystem.edu  </a>
+  <br>
+ <img class="icon" src="icons8-phone-50.png" alt="phone" style="width: 20px; height: 20px;"> <img class="iconbig" src="icons8-phone-50.png" alt="phone"> 1+888-888-8888 
+<br><strong> Copyright 2025, Alison McAleer</strong> 
+</footer>
 </body>
 </html> 
