--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,27 +9,26 @@
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
-            <link rel="icon" href="favicon.ico" type="image/x-icon">
-             <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
+            
                <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
            
 <link rel="stylesheet" type="text/css" href="navRESPONSIVETEST.css">
 </head>
 <body class="body">
- <nav>
+<nav>
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="toggle">&#9776;</label>
   <ul class="menu">
-    <li class="logo"><a href="#">Jumping into Geometry!</a></li>
+    <li class="logo">Jumping into Geometry!</li>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
      <ul class="submenu">
-        <li class="subitem"><a href="learn.html/#2Dshapes">2D Shapes</a></li>
-        <li class="subitem"><a href="learn.html/#3Dshapes">3D Figures</a></li>
-        <li class="subitem"><a href="learn.html/#comparison">2D vs. 3D</a></li>
+        <li class="subitem"><a href="learn.html#2Dshapes">2D Shapes</a></li>
+        <li class="subitem"><a href="learn.html#3Dshapes">3D Figures</a></li>
+        <li class="subitem"><a href="learn.html#comparison">2D vs. 3D</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
@@ -41,47 +40,73 @@
   <header><h1 class="h1"><em>Alison McAleer</em></h1></header><h1 class="h1"> Educator Credentials</h1>
  
   <div class="flex-container"> 
+
     <section id="credentials" class="section">
       <h2 class="h2">About Me</h2>
       <p>Welcome to my educator credentials page! Here you will find information about my education, certifications, and professional background.</p>
-  <div class="textbox2">
-      <iframe class="iframe" width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" frameborder="0" allowfullscreen>
-   </iframe></div>
-<div class="textbox2">
-  <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years; currently I am teaching 2nd grade in Jefferson City. Currently, I am in the Ed.S program with Mizzou for Information Technology and Design. My estimation completion date is Summer 2027 due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 5 months old. I enjoy teaching Math and Reading, while also enjoying learning myself.<br></p>
-</section>
-</div>
- <br>
+  
+      <div class="textbox2">
+  <iframe width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" id="resumevideo" frameborder="0" allowfullscreen></iframe>
+  </div>
+    <div class="textbox2">
+     <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville, Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years. Currently, I am teaching 2nd grade in Jefferson City while enrolled in the Ed.S program with Mizzou for Information Technology and Design. My estimated completion date is Summer 2027, due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 6 months old. I enjoy teaching Math and Reading, as well as being a student myself. I enjoy kayaking, photography, technology, board games, and spending time with my family.<br></p>
+    </section></div>
+<br>
+
  <section id="education" class="section">
-  <ol>
-     <div class="quote-box">  
-       <h2>Education History</h2>
+ <div class="flex-container">
+  
+  <div class="purpose">
+    <h2 class="h2">Education History</h2>
+  <ol>  
     <li> Graduated Highshool in 2014 </li>
     <li> Graduated from Georgia College & State University in Milledgeville, GA with a Bachelor's Degree in Special Education (May, 2018)</li>
   <li>Master's Degree in Educational Leadership from Georgia College (August, 2020)</li>
-  </ol>
- </div></section>
+   <li>Pursuing Ed.S degree in Information Technology & Design with University of Missouri (estimated completion - Summer 2027)</li>
+</ol>
+
+  </div>
+  <div class="imgalison">
+  <img src="alisonheadshot.jpg" id="imgalison" alt="alisonimage"></div>
+ </div>
+</section>
+
  <br>
 <br>
-<section id="certifications" class="section">
-  <img src="alisonheadshot.jpg" class="imgalison" alt="Alison McAleer Headshot">
-  <div class="quote-box"> <h2><strong>Trainings & Certifications</strong></h2><p><em>Trained</em> in <strong>Orton Gillingham</strong></p><p>Trained in Barton Reading & Spelling Program</p><p>CPR & First Aid Certified</p><p>Adaptive Education Certified</p><p>Middle Grades Math Certified</p> <p>See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></p>
-  </section></div>
+
+<div class="flex-container">
+   
+  <div class="purpose">
+  <h2><strong>Trainings & Certifications</strong></h2>
+  <ul id="trainings">
+    <li><em>Trained</em> in <strong>Orton Gillingham</strong></li>
+    <li>Trained in Barton Reading & Spelling Program</li>
+    <li>CPR & First Aid Certified</li>
+    <li>Adaptive Education Certified</li>
+    <li>Middle Grades Math Certified</li></ul>
+  
+  <h2>  See my complete Resume <a href="alisonresume2025.pdf" class="boxed-link">here!</a></h2>
+  </div>
+
+    <blockquote id="blockquote">
+      "The roots of education are bitter, but the fruit is sweet." – Aristotle
+    </blockquote>
+</div>
+
     <br>
   <br>
   <br>
 
-  <div class="quote-box">
-    <blockquote class="quotes">
-      "The roots of education are bitter, but the fruit is sweet." – Aristotle
-    </blockquote>
-  </div>
+
 </div>
-
 </main>
-<footer>Alison McAleer <a href="contactme"><img class="icon"src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">
-  <img class="iconbig"src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20pxx; height: 20px;">1+888-888-8888 </footer>
-
+<footer>Alison McAleer <br>
+  <img class="icon" src="icons8-email-24.png" alt="emailicon" style="width: 20px; height: 20px;"><img class="iconbig" src="icons8-email-24.png" alt="emailicon">
+ 
+  <a href="contact.html"> ampdp@umsystem.edu  </a>
+  <br>
+ <img class="icon" src="icons8-phone-50.png" alt="phone" style="width: 20px; height: 20px;"> <img class="iconbig" src="icons8-phone-50.png" alt="phone"> 1+888-888-8888 
+<br><strong> Copyright 2025, Alison McAleer</strong> 
+</footer>
 </body>
 </html> 
