--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -24,7 +24,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <a href="learn.html">Let's Learn!</a> <label id="submenu-toggle" class="dropdownarrow">&#9660;</label>
      <ul class="submenu">
         <li class="subitem"><a href="learn.html#2Dshapes">2D Shapes</a></li>
         <li class="subitem"><a href="learn.html#3Dshapes">3D Figures</a></li>
@@ -45,12 +45,14 @@
       <h2 class="h2">About Me</h2>
       <p>Welcome to my educator credentials page! Here you will find information about my education, certifications, and professional background.</p>
   
-      <div class="textbox2">
-  <iframe width="480" height="270" src="https://www.powtoon.com/embed/eUONGOacQly/" id="resumevideo" frameborder="0" allowfullscreen></iframe>
-  </div>
+     
+  <iframe src="https://www.powtoon.com/embed/eUONGOacQly/" id="resumevideo" frameborder="0" allowfullscreen></iframe>
+
     <div class="textbox2">
      <p>My name is Alison McAleer, I <em>graduated</em> in 2018 from Georgia College in Milledgeville, Georgia with my Bachelors in Special Education.  In 2020, I received my Masters in Educational Leadership. I have been teaching for 6 years. Currently, I am teaching 2nd grade in Jefferson City while enrolled in the Ed.S program with Mizzou for Information Technology and Design. My estimated completion date is Summer 2027, due to my full time job and being a mother. I have 3 girls, all under the age of 5 years old, with my youngest being 6 months old. I enjoy teaching Math and Reading, as well as being a student myself. I enjoy kayaking, photography, technology, board games, and spending time with my family.<br></p>
-    </section></div>
+    
+  </div>
+  </section>
 <br>
 
  <section id="education" class="section">
@@ -91,7 +93,6 @@
     <blockquote id="blockquote">
       "The roots of education are bitter, but the fruit is sweet." – Aristotle
     </blockquote>
-</div>
 
     <br>
   <br>
