--- a/webdevelopment/reflection.html
+++ b/webdevelopment/reflection.html
@@ -18,7 +18,7 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <a href="learn.html">Let's Learn!</a> <label id="submenu-toggle" class="dropdownarrow">&#9660;</label>
      <ul class="submenu">
         <li class="subitem"><a href="learn.html#2Dshapes">2D Shapes</a></li>
         <li class="subitem"><a href="learn.html#3Dshapes">3D Figures</a></li>
@@ -42,7 +42,7 @@
     <div class="video-container">
   
     <iframe 
-  width="560" 
+  width="500" 
   height="315" 
   src="https://www.youtube.com/embed/gk_u1xr7jQg?si=321M5JG4-BLJnqiU" 
   title="YouTube video player" 
@@ -51,11 +51,12 @@
   referrerpolicy="strict-origin-when-cross-origin" 
   allowfullscreen>
 </iframe>
-</div>
-<div class="video-container">
+
+<br>
+
   
     <iframe 
-  width="560" 
+  width="500" 
   height="315" 
   src="https://www.youtube.com/embed/3DShapesFacesEdgesVerticesGeometryForKids?si=27uQZGw1P5B3IpYc" 
   id="3dshapesvideo"
@@ -64,7 +65,7 @@
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
   referrerpolicy="strict-origin-when-cross-origin" 
   allowfullscreen>
-<br></iframe>
+</iframe><br>
 </div>
 </section>
 <br>
