--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -9,15 +9,14 @@
 <head>
                <meta charset="utf-8">
                <title>Contact</title>
-            <link rel="icon" href="favicon.ico" type="image/x-icon">
-             <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
+            
 <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
            
 <link rel="stylesheet" type="text/css" href="navRESPONSIVETEST.css">
 </head>
 <body class="body">
-  <nav>
+ <nav>
   <input type="checkbox" id="menu-toggle">
   <label for="menu-toggle" class="toggle">&#9776;</label>
   <ul class="menu">
@@ -25,11 +24,11 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
     <li class="dropdown">
-      <a href="learn.html">Let's Learn!</a> <label id="submenu-toggle" class="dropdownarrow">&#9660;</label>
-      <ul class="submenu">
-        <li class="subitem"><a href="#2Dshapes">2D Shapes</a></li>
-        <li class="subitem"><a href="#3Dshapes">3D Figures</a></li>
-        <li class="subitem"><a href="#comparison">2D vs. 3D</a></li>
+     <a href="learn.html">Let's Learn!</a> <label for="submenu-toggle" class="dropdownarrow">&#9660;</label>
+     <ul class="submenu">
+        <li class="subitem"><a href="learn.html#2Dshapes">2D Shapes</a></li>
+        <li class="subitem"><a href="learn.html#3Dshapes">3D Figures</a></li>
+        <li class="subitem"><a href="learn.html#comparison">2D vs. 3D</a></li>
       </ul>
     </li>
     <li><a href="reflection.html">Resources & References</a></li>
@@ -41,7 +40,7 @@
   <header> <h1 class="h1">Contact Me</h1></header>
 <div class="flex-container">
     <div class="quote-box">
-        <p>If you have any questions, comments, or feedback about the site, pleasemreach out to me using the contact information below. I would love to hear from you!</p>
+        <p>If you have any questions, comments, or feedback about the site, please reach out to me using the contact information below. I would love to hear from you!</p>
 <h2 class="h2">Contact Information</h2>
 
 <h3> Alison McAleer</h3>
@@ -54,7 +53,8 @@ Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  amp
 
   <label for="subject">Subject:<br>
   <input type="text" id="subject" name="subject" placeholder="subject" required></label><br><br>
-
+<label for="email">Email:<br>
+  <input type="text" id="email" name="email" placeholder="email" required></label><br><br>
   <label for="message">Message:<br>
   <textarea id="message" name="message" placeholder="Type Text Here" rows="10" required></textarea></label><br><br>
 <button type="reset">Reset</button>
@@ -62,9 +62,13 @@ Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  amp
 </form>
 </div></div>
   </main>
-  <footer>Alison McAleer <a href="contactme"><img class="icon" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">
-  <img class="iconbig" src="favicon.ico" alt="favicon" style="width: 20px; height: 20px;">  
-ampdp@umsystem.edu</a> Copyright 2025 Alison McAleer <img class="icon" src="favicon-16x16.png" alt="favicon" style="width: 20px; height: 20px;"> <img class="iconbig" src="favicon-16x16.png" alt="favicon" style="width: 20px; height: 20px;">1+888-888-8888 </footer>
-
-  </body>
-  </html>
+<footer>Alison McAleer <br>
+  <img class="icon" src="icons8-email-24.png" alt="emailicon" style="width: 20px; height: 20px;"><img class="iconbig" src="icons8-email-24.png" alt="emailicon">
+ 
+  <a href="contact.html"> ampdp@umsystem.edu  </a>
+  <br>
+ <img class="icon" src="icons8-phone-50.png" alt="phone" style="width: 20px; height: 20px;"> <img class="iconbig" src="icons8-phone-50.png" alt="phone"> 1+888-888-8888 
+<br><strong> Copyright 2025, Alison McAleer</strong> 
+</footer>
+</body>
+</html> 
