--- a/webdevelopment/about.html
+++ b/webdevelopment/about.html
@@ -9,7 +9,7 @@
 <head>
                <meta charset="utf-8">
                <title>Educator Credentials</title>
-            
+             <link rel="shortcut icon" type="image/x-icon" href="icons8-frog-48.png">
                <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
            
