--- a/webdevelopment/learn.html
+++ b/webdevelopment/learn.html
@@ -9,6 +9,7 @@
 <head>
                <meta charset="utf-8">
                <title>Let's Learn!</title>
+                <link rel="shortcut icon" type="image/x-icon" href="icons8-frog-48.png">
                <link rel="stylesheet" href="style.css">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="navRESPONSIVETEST.css">
@@ -65,25 +66,25 @@
   </thead>
   <tbody>
     <tr> 
-      <td>Triangle<br><img src="triangle.png"  alt="triangle"  style="width:200px; height:auto;"></td>
+      <td>Triangle<br><img src="triangle.png"  id="triangle" alt="triangle"  style="width:200px; height:auto;"></td>
       <td>3</td>
       <td>3</td>
     </tr>
     <tr> 
       <td>Quadrilateral<br>
-        <img src="rectangle.png" alt="rectangle"  style="width:180px; height:auto;"><br>
-        <img src="square.png" alt="square"  style="width:100px; height:auto;">
+        <img src="rectangle.png" id="rectangle" alt="rectangle" style="width:180px; height:auto;"><br>
+        <img src="square.png" id="square"  alt="square"  style="width:100px; height:auto;">
       </td>
       <td>4</td>
       <td>4</td>
     </tr>
     <tr> 
-      <td>Pentagon<br><img src="pentagon.png" alt="pentagon"  style="width:100px; height:auto;"></td>
+      <td>Pentagon<br><img src="pentagon.png" id="pentagon"   alt="pentagon"  style="width:100px; height:auto;"></td>
       <td>5</td>
       <td>5</td>
     </tr>
     <tr> 
-      <td>Hexagon<br><img src="hexagon.png" alt="hexagon"  style="width:100px; height:auto;"></td>
+      <td>Hexagon<br><img src="hexagon.png" id="hexagon"   alt="hexagon"  style="width:100px; height:auto;"></td>
       <td>6</td>
       <td>6</td>
     </tr>
