--- a/webdevelopment/contact.html
+++ b/webdevelopment/contact.html
@@ -47,7 +47,7 @@
 Email:<a href="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject">  ampdp@umsystem.edu </a>
 <form class="form"   action="mailto:ampdp@umsystem.edu?Subject=Here%20is%20my%20subject" method="POST" enctype="text/plain">
   <label for="First">First Name:<br>
-  <input type="text" size="40px"  id="First" name="First" placeholder="First Name"    required></label><br><br>
+  <input type="text" id="First" name="First" placeholder="First Name"    required></label><br><br>
 <label for="Last">Last Name:<br>
   <input type="text" id="Last" name="Last" placeholder="Last Name" required></label><br><br>
 
